--- a/app/assets/sass/1-base/_global.sass
+++ b/app/assets/sass/1-base/_global.sass
@@ -103,3 +103,8 @@ figure
   .paragraphHeader h2   
   .separator
     margin-bottom: 0     
+.alertify-logs.center.center
+  top: 50%
+  left: 50%
+  * 
+    margin-left: -50%
