--- a/app/assets/sass/3-layout/_header.sass
+++ b/app/assets/sass/3-layout/_header.sass
@@ -66,7 +66,7 @@
 .minicart-border 
   border-bottom: 1px solid $primary  
 .minicart
-  p 
+  a 
     line-height: 40px
     color: $primary
     margin-bottom: 0
