--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -17,6 +17,7 @@
 @import 3-layout/_forms
 @import 3-layout/_category
 @import 3-layout/_product-page
+@import 3-layout/_cos
 
 // @import _header
 // @import _product-box
