--- a/app/assets/sass/1-base/_reset.sass
+++ b/app/assets/sass/1-base/_reset.sass
@@ -32,5 +32,7 @@ input, button, textarea, select
 	outline: none
 	box-shadow: none
 	border: none
+textarea 
+	max-width: 100%	
 .media
 	margin-top: 0	
