--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -12,12 +12,15 @@
 @import 2-modules/_nav
 @import 2-modules/_sliders
 @import 2-modules/_product-box
+@import 2-modules/_forms
 
 @import 3-layout/_header
 @import 3-layout/_forms
+@import 3-layout/_account
 @import 3-layout/_category
 @import 3-layout/_product-page
 @import 3-layout/_cos
+@import 3-layout/_checkout
 
 // @import _header
 // @import _product-box
