--- a/app/assets/sass/2-modules/_nav.sass
+++ b/app/assets/sass/2-modules/_nav.sass
@@ -1,91 +1,92 @@
 .navigation-category
-	position: relative
-	z-index: 99
-	button 
-		background-color: $primary
-		color: #fff 
-		line-height: 40px
-		display: block
-		width: 100%
-		text-align: left
-		padding-left: 2*$spacing
-		padding-top: 0
-		padding-bottom: 0
-		.fa 
-			margin-right: 10px
-			float: right 
-			line-height: 40px
-	.navigation-main 
-		background-color: #effaff
-		// border: 1px solid $primary	
-		.level-2	
-			a 
-				height: 40px
-				line-height: 40px
-				color: #000
-				padding-left: 2*$spacing
-				display: block
-				font-size: 0.9em
-				border-bottom: 1px solid #D0E8F3
-				&:hover 
-					background-color: $primary
-					color: #fff		
-			&:hover 
-				.M2
-					display: block		
-		.level-3
-			a	
-				line-height: 1.8em
-				height: auto
-				border: none	
-				padding: 0
-				text-transform: capitalize
-				&:hover 
-					color: #000
-					background-color: transparent
-					text-decoration: underline	
+  position: relative
+  z-index: 99
+  button 
+    background-color: $primary
+    color: #fff 
+    line-height: 40px
+    display: block
+    width: 100%
+    text-align: left
+    padding-left: 2*$spacing
+    padding-top: 0
+    padding-bottom: 0
+    .fa 
+      margin-right: 10px
+      float: right 
+      line-height: 40px
+  .navigation-main 
+    background-color: #effaff
+    // border: 1px solid $primary 
+    .level-2  
+      a 
+        height: 40px
+        line-height: 40px
+        color: #000
+        padding-left: 2*$spacing
+        display: block
+        font-size: 0.9em
+        border-bottom: 1px solid #D0E8F3
+        &:hover 
+          background-color: $primary
+          color: #fff   
+      &:hover 
+        .M2
+          display: block    
+    .level-3
+      a 
+        line-height: 1.7em
+        height: auto
+        border: none  
+        padding: 0
+        color: inherit
+        text-transform: capitalize
+        &:hover 
+          color: #000
+          background-color: transparent
+          text-decoration: underline  
 .navigation-homepage
-	+justify-nav
-	a 
-		background-color: $primary
-		color: #fff 
-		height: 40px
-		line-height: 40px
-		display: block
-		text-align: center
-		&:hover 
-			background-color: $secondary
-			color: #fff 
+  +justify-nav
+  a 
+    background-color: $primary
+    color: #fff 
+    height: 40px
+    line-height: 40px
+    display: block
+    text-align: center
+    &:hover 
+      background-color: $secondary
+      color: #fff 
 .category-expanded 
-	position: relative	
-	ul.navigation-main 
-		position: absolute
-		z-index: 2
-		left: 10px
-		right: 10px
-		top: 100%
+  position: relative  
+  ul.navigation-main 
+    position: absolute
+    z-index: 2
+    left: 10px
+    right: 10px
+    top: 100%
 .category-collapsed
-	position: relative
-	ul.navigation-main 
-		display: none
-		z-index: 2		
-		position: absolute
-		left: 10px
-		right: 10px
-		top: 38px
-	&:hover 
-		ul.navigation-main 
-			display: block	
+  position: relative
+  ul.navigation-main 
+    display: none
+    z-index: 2    
+    position: absolute
+    left: 10px
+    right: 10px
+    top: 38px
+  &:hover 
+    ul.navigation-main 
+      display: block  
 .M2
-	background: #fff 
-	position: absolute
-	left: 100%
-	top: 0
-	bottom: 0
-	width: 877px
-	display: none 
-	column-count: 3
-	padding: 1em
-	box-shadow: 0px 0px 6px #aaa
-
-	
+  background: #fff 
+  position: absolute
+  left: 100%
+  top: 0
+  bottom: 0
+  width: 877px
+  display: none 
+  column-count: 3
+  padding: 1em 
+  color: #000000
+  border: 2px solid #8ADCF2
+  
