--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -13,6 +13,7 @@
 @import 2-modules/_sliders
 @import 2-modules/_product-box
 @import 2-modules/_forms
+@import 2-modules/_tables
 
 @import 3-layout/_header
 @import 3-layout/_forms
