--- a/app/assets/sass/2-modules/_nav.sass
+++ b/app/assets/sass/2-modules/_nav.sass
@@ -35,7 +35,7 @@
           display: block    
     .level-3
       a 
-        line-height: 1.7em
+        line-height: 2
         height: auto
         border: none  
         padding: 0
@@ -83,6 +83,7 @@
   left: 100%
   top: 0
   bottom: 0
+  min-height: 300px
   width: 877px
   display: none 
   column-count: 3
