--- a/app/assets/sass/3-layout/_category.sass
+++ b/app/assets/sass/3-layout/_category.sass
@@ -7,10 +7,22 @@
     display: block
     &:hover 
       color: $primary
+    &.active
+      // color: $primary
+      font-weight: 600  
+      &:before 
+        font-family: "FontAwesome"
+        content: "\f105"
+        margin-right: 0.5em
+
   .link-group
     margin-bottom: $spacing*2
     &:last-child 
       margin-bottom: 0  
+  .link-group-account
+    margin-bottom: 0.5em
+    &:last-child 
+      margin-bottom: 0      
 .sidebar 
   margin-top: $spacing*2
   h3 
@@ -35,7 +47,8 @@
       color: #fff
     a 
       line-height: 2
-      padding-left: 15px  
+      padding-left: 15px 
+      cursor: pointer 
 .category-header
   color: $primary 
   margin-bottom: $spacing*2   
