--- a/app/assets/sass/2-modules/_tables.sass
+++ b/app/assets/sass/2-modules/_tables.sass
@@ -5,3 +5,22 @@
 		border-bottom: 1px solid #eee
 	.sort-header	
 		display: inline-block
+.table-order
+  td, th 
+    padding: 0.2em
+    border: 1px solid #aaa
+  th 
+    border-color: $primary
+    font-weight: 400
+  thead 
+    background-color: $primary
+    color: #fff      
+  .form-control
+    border: none 
+    text-align: center
+    background-color: transparent
+    font-weight: 700
+  .qty
+    background-color: #c7eafd  
+.add-to-cart-header      
+  margin: 1em 0
