--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -22,6 +22,7 @@
 @import 3-layout/_product-page
 @import 3-layout/_cos
 @import 3-layout/_checkout
+@import 3-layout/_content
 
 // @import _header
 // @import _product-box
