--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -109,13 +109,16 @@
     bottom: 2em 
     left: $spacing
     right: $spacing
+    .btn-rtc
+      width: 15em
   .detail
     min-height: 19em  
   .title   
     height: auto
-    line-height: 1.4   
-    font-size: 1.8em
+    line-height: 1.2   
+    font-size: 1.6em
     font-weight: 700
+    margin-bottom: 0.5em
   .badge-lp
     left: auto
     top: 0
