--- a/app/assets/sass/2-modules/_tables.sass
+++ b/app/assets/sass/2-modules/_tables.sass
@@ -14,7 +14,9 @@
     font-weight: 400
   thead 
     background-color: $primary
-    color: #fff      
+    color: #fff 
+  tbody 
+    font-size: 0.9em       
   .form-control
     border: none 
     text-align: center
