--- a/app/assets/sass/3-layout/_content.sass
+++ b/app/assets/sass/3-layout/_content.sass
@@ -18,3 +18,5 @@
       height: 10px
       display: inline-block
       margin-right: 0.5em
+.content-2-columns figure.noPaddingRight  
+  padding-top: 4em      
