--- a/app/assets/sass/3-layout/_product-page.sass
+++ b/app/assets/sass/3-layout/_product-page.sass
@@ -73,7 +73,8 @@
       font-weight: 700
       color: #656565
       margin-bottom: 0.3em
-      font-size: 2.4em
+      font-size: 1.8em
+      line-height: 1.4
     .code 
       font-size: 1.2em  
       margin-bottom: 1em
@@ -94,7 +95,7 @@
       font-size: 1.2em
       font-weight: 700
       color: $green
-      margin-bottom: $spacing*2
+      // margin-bottom: $spacing*2
     .compare 
       margin-top: $spacing*2
       color: $primary
@@ -106,13 +107,17 @@
       text-transform: uppercase
       color: #fff
       font-weight: 700
-      padding: 0.7em 2.8em   
+      padding: 0em 2.8em   
+      line-height: 35px
+      display: inline-block
       &:hover 
         background-color: $secondary
       &[disabled]:hover 
         background-color: gray  
     .quantity   
       margin-bottom: $spacing*2  
+      margin-right: 0.5em
+      display: inline-block
       span 
         margin-right: 0.5em
       input 
@@ -171,6 +176,7 @@
       font-size: 0.9em        
 .variant
   color: $primary 
+  margin: 1em 0
   .btn-rtc
     min-width: 10em    
   button     
