--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -14,6 +14,7 @@
 @import 2-modules/_product-box
 @import 2-modules/_forms
 @import 2-modules/_tables
+@import 2-modules/_filters
 
 @import 3-layout/_header
 @import 3-layout/_forms
