--- a/app/assets/sass/1-base/_global.sass
+++ b/app/assets/sass/1-base/_global.sass
@@ -108,3 +108,66 @@ figure
   left: 50%
   * 
     margin-left: -50%
+.rtc-telephone
+  width: 16px
+  height: 16px    
+  background-image: url(../img/SVG_telefon.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle
+.rtc-email
+  width: 16px
+  height: 16px    
+  background-image: url(../img/SVG_mail.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle  
+.rtc-newsletter
+  width: 16px
+  height: 16px    
+  background-image: url(../img/SVG_newsletter.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle    
+.rtc-youtube
+  width: 16px
+  height: 16px    
+  background-image: url(../img/SVG_youtube.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle   
+.rtc-facebook
+  width: 16px
+  height: 16px    
+  background-image: url(../img/SVG_facebook.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle   
+.rtc-search
+  width: 25px
+  height: 25px    
+  background-image: url(../img/SVG_cautare.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle     
+.rtc-cart
+  width: 30px
+  height: 30px    
+  background-image: url(../img/SVG_cos_cumparaturi.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle        
