--- a/app/assets/sass/3-layout/_header.sass
+++ b/app/assets/sass/3-layout/_header.sass
@@ -44,6 +44,7 @@
     line-height: 40px
     background-color: $primary
     color: #fff 
+    padding: 0
     &:hover 
       background-color: $secondary 
 .button-login
@@ -81,9 +82,9 @@
     padding-right: 0
     padding-left: 30px
   i 
-    color: $green   
-    font-size: 40px
-    height: 30px
-    display: block
-    float: right
-    padding-right: 1em 
+    // color: $green   
+    // font-size: 40px
+    // height: 30px
+    // display: block
+    // float: right
+    // padding-right: 1em 
