--- a/app/assets/sass/3-layout/_content.sass
+++ b/app/assets/sass/3-layout/_content.sass
@@ -20,3 +20,19 @@
       margin-right: 0.5em
 .content-2-columns figure.noPaddingRight  
   padding-top: 4em      
+.modal-video-trigger
+  .video-trigger
+    cursor: pointer
+    &:before 
+      font-family: "FontAwesome"
+      content: "\f16a"
+      color: red
+      position: absolute
+      left: 50%
+      top: 50%
+      font-size: 5em
+      margin-left: -0.5em
+      margin-top: -0.7em
+  img 
+    width: 100%
+    
