--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -119,6 +119,8 @@
     font-size: 1.6em
     font-weight: 700
     margin-bottom: 0.5em
+    a 
+      color: #4E4E4E
   .badge-lp
     left: auto
     top: 0
