--- a/app/assets/sass/3-layout/_category.sass
+++ b/app/assets/sass/3-layout/_category.sass
@@ -49,6 +49,7 @@
     border-color: $primary
     margin-top: -1px  
     padding: 0
+    width: 100%
     &>li>a:hover
       background-color: $primary
       color: #fff
