--- a/app/assets/sass/2-modules/_buttons.sass
+++ b/app/assets/sass/2-modules/_buttons.sass
@@ -30,7 +30,7 @@
   background-color: $primary    
 .btn-finalize 
   @extend .btn-main 
-.btn-continue-shop
+.btn-continue-shop, .btn-main--darker
   @extend .btn-main 
   background-color: $primary 
   &:hover
