--- a/app/assets/sass/2-modules/_tables.sass
+++ b/app/assets/sass/2-modules/_tables.sass
@@ -1,10 +1,11 @@
 .table-account
-	font-size: 0.8em
-	tr 
-		line-height: 2
-		border-bottom: 1px solid #eee
-	.sort-header	
-		display: inline-block
+  tbody
+    font-size: 0.8em
+  tr 
+    line-height: 2
+    border-bottom: 1px solid #eee
+  .sort-header  
+    display: inline-block
 .table-order
   td, th 
     padding: 0.2em
@@ -26,3 +27,25 @@
     background-color: #c7eafd  
 .add-to-cart-header      
   margin: 1em 0
+.account-heading-fix
+  font-size: 1.2em
+  font-weight: 400
+  color: #00ACEE
+  border-bottom: 1px solid #00ACEE
+  line-height: 1.6
+  padding-bottom: 0.5em
+  margin-bottom: 0.5em  
+.table-simple
+  font-size: 1em
+  td 
+    line-height: 2
+.table-striped
+  thead   
+    background-color: #E0E0E0
+    th 
+      border: none !important     
+  tbody 
+    font-size: 0.8em
+    td 
+      border: none !important
+      border-top: 1px solid #ddd !important
