--- a/app/assets/sass/1-base/_global.sass
+++ b/app/assets/sass/1-base/_global.sass
@@ -117,6 +117,15 @@ figure
   display: inline-block
   background-repeat: no-repeat
   vertical-align: middle
+.rtc-home
+  width: 16px
+  height: 16px    
+  background-image: url(../img/SVG_home.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle  
 .rtc-email
   width: 16px
   height: 16px    
