--- a/app/assets/sass/3-layout/_header.sass
+++ b/app/assets/sass/3-layout/_header.sass
@@ -24,8 +24,8 @@
   a 
     color: $gray 
     &:hover 
-      color: $secondary
-      text-decoration: underline
+      color: #6e6e6e
+      text-decoration: none
   i 
     margin-right: 0.3em    
 .header-search 
