--- a/app/assets/sass/0-tools/_mixins.sass
+++ b/app/assets/sass/0-tools/_mixins.sass
@@ -52,6 +52,13 @@
   font-size: 1.2em
   color: $primary
   font-weight: 600
+  line-height: 2
+=heading-carousel
+  font-size: 1.2em
+  color: $primary
+  font-weight: 600
+  line-height: 2
+
 // =keyframes($animation-name)
 //   @-webkit-keyframes #{$animation-name}
 //     @content
