--- a/app/assets/sass/1-base/_reset.sass
+++ b/app/assets/sass/1-base/_reset.sass
@@ -36,3 +36,9 @@ textarea
 	max-width: 100%	
 .media
 	margin-top: 0	
+.addthis_sharing_toolbox
+	* 
+		transition: all 0s linear
+#at20mc
+	* 
+		transition: all 0s linear		
