--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -175,8 +175,7 @@
   position: relative
   margin-bottom: $spacing*2
   h2
-    +heading-section
-    margin-bottom: $spacing
+    +heading-carousel
   &.product-carousel-istoric 
     .list
       padding: 20px 20px 0
