--- a/app/assets/sass/2-modules/_sliders.sass
+++ b/app/assets/sass/2-modules/_sliders.sass
@@ -2,6 +2,8 @@
   border: 1px solid $primary
   padding-bottom: 39px
   margin-top: 20px
+  * 
+    transition: all 0s linear
   .item
     height: 380px
     width: 100%
@@ -14,6 +16,8 @@
     width: 100%
 .middle-slider
   border: 1px solid #cdcdcd
+  * 
+    transition: all 0s linear
   .item
     height: 370px
     width: 100%
@@ -40,39 +44,29 @@
       // margin-top: -20px 
       // &:hover 
       //   background-color: $primary  
-      background-image: url(../img/arrows.jpg)
-      width: 56px
+      background-image: url(../img/bannerSecundDreapta.svg)
+      width: 26px
       background-repeat: no-repeat
-      background-position: -58px 0px
-      height: 257px
+      background-position: center
+      background-size: cover
+      height: 44px
       position: absolute
-      right: 15px
+      right: 11px
       top: 50%
-      margin-top: -128px
-      text-align: right
+      margin-top: -22px
+      text-align: left
       display: block
     &.prev 
-      // right: auto
-      // left: 10px
-      // top: 50%
-      // background-color: #000
-      // color: #fff
-      // width: 20px
-      // text-align: center
-      // height: 40px  
-      // line-height: 40px
-      // margin-top: -20px 
-      // &:hover 
-      //   background-color: $primary       
-      background-image: url(../img/arrows.jpg)
-      width: 56px
+      background-image: url(../img/bannerSecundStanga.svg)
+      width: 26px
       background-repeat: no-repeat
-      background-position: 2px 0px
-      height: 257px
+      background-position: center
+      background-size: cover
+      height: 44px
       position: absolute
-      left: 15px
+      left: 11px
       top: 50%
-      margin-top: -128px 
+      margin-top: -22px
       text-align: left
       display: block
 .unslider-nav 
