--- a/app/assets/sass/3-layout/_content.sass
+++ b/app/assets/sass/3-layout/_content.sass
@@ -18,8 +18,8 @@
       height: 10px
       display: inline-block
       margin-right: 0.5em
-.content-2-columns figure.noPaddingRight  
-  padding-top: 4em      
+// .content-2-columns figure.noPaddingRight  
+//   padding-top: 4em      
 .modal-video-trigger
   .video-trigger
     cursor: pointer
@@ -35,4 +35,6 @@
       margin-top: -0.7em
   img 
     width: 100%
-    
+.banner-home-small
+  a 
+    display: block    
