--- a/app/assets/sass/3-layout/_header.sass
+++ b/app/assets/sass/3-layout/_header.sass
@@ -67,7 +67,7 @@
 .ion-android-home
   color: #1aa145  
 .minicart-border 
-  border-bottom: 1px solid $primary  
+  // border-bottom: 1px solid $primary  
 .minicart
   a 
     line-height: 40px
