--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -11,6 +11,7 @@
 @import 2-modules/_buttons
 @import 2-modules/_nav
 @import 2-modules/_sliders
+@import 2-modules/_carousel
 @import 2-modules/_product-box
 @import 2-modules/_forms
 @import 2-modules/_tables
