--- a/app/assets/sass/1-base/_global.sass
+++ b/app/assets/sass/1-base/_global.sass
@@ -95,7 +95,7 @@ figure
   width: 100%
   margin-bottom: 2em
 .image-top
-  margin-bottom: 1.5em
+  margin-bottom: 1.5em  
 #main-content-2-columns-featured
   text-align: center
   .paragraphText
@@ -135,6 +135,15 @@ figure
   display: inline-block
   background-repeat: no-repeat
   vertical-align: middle  
+.rtc-home
+  width: 16px
+  height: 16px    
+  background-image: url(../img/SVG_home.svg)
+  background-size: contain
+  background-position: center
+  display: inline-block
+  background-repeat: no-repeat
+  vertical-align: middle   
 .rtc-newsletter
   width: 16px
   height: 16px    
@@ -152,7 +161,11 @@ figure
   background-position: center
   display: inline-block
   background-repeat: no-repeat
-  vertical-align: middle   
+  vertical-align: middle
+  .footer & 
+    width: 26px
+    height: 26px 
+    vertical-align: top  
 .rtc-facebook
   width: 16px
   height: 16px    
@@ -161,7 +174,11 @@ figure
   background-position: center
   display: inline-block
   background-repeat: no-repeat
-  vertical-align: middle   
+  vertical-align: middle 
+  .footer & 
+    width: 26px
+    height: 26px 
+    vertical-align: top  
 .rtc-search
   width: 25px
   height: 25px    
