--- a/app/assets/sass/3-layout/_cos.sass
+++ b/app/assets/sass/3-layout/_cos.sass
@@ -41,4 +41,22 @@
     line-height: 2   
     font-weight: 700  
 .header-cos 
-  border-bottom: 1px solid #eee;    
+  border-bottom: 1px solid #eee
+.rtc-cart-quantity
+  background-color: rgba(2, 176, 89, 0.8)
+  color: #fff
+  width: 1.5rem
+  height: 1.5rem
+  display: block
+  position: absolute
+  right: 10em
+  z-index: 2
+  right: 0.4em
+  top: 0em
+  line-height: 1.5rem
+  -webkit-border-radius: 100%
+  border-radius: 100%
+  margin-right: 0rem
+  font-size: 0.7em
+  font-style: normal
+  font-weight: 600
