--- a/app/assets/sass/3-layout/_header.sass
+++ b/app/assets/sass/3-layout/_header.sass
@@ -58,6 +58,18 @@
   &:hover 
     background-color: $secondary 
     color: #fff
+  &--div
+    &:hover 
+      background-color: $red
+    a 
+      color: #fff 
+      &:hover 
+        text-decoration: underline
+    .header-myaccount
+      margin-right: 1em
+      padding-right: 1em
+      border-right: 1px solid #fff  
+      line-height: 1  
 .ion-ios-telephone
   color: #9dc123    
 .ion-ios-email
@@ -68,23 +80,3 @@
   color: #1aa145  
 .minicart-border 
   // border-bottom: 1px solid $primary  
-.minicart
-  a 
-    line-height: 40px
-    color: $primary
-    margin-bottom: 0
-    text-align: center
-    line-height: 40px
-    // color: #00acee
-    margin-bottom: 0
-    text-align: center
-    margin-left: -20px
-    padding-right: 0
-    padding-left: 30px
-  i 
-    // color: $green   
-    // font-size: 40px
-    // height: 30px
-    // display: block
-    // float: right
-    // padding-right: 1em 
