--- a/app/assets/sass/3-layout/_product-page.sass
+++ b/app/assets/sass/3-layout/_product-page.sass
@@ -1,9 +1,10 @@
 .product
   padding-top: $spacing*4
   .main-image 
-    margin-bottom: $spacing*2 
+    margin-bottom: $spacing*4 
     position: relative
     img 
+      max-width: 350px
       margin: 0 auto
     .badge-new
       position: absolute
@@ -25,7 +26,7 @@
       border: 1px solid $gray 
       margin-bottom: $spacing*2
       display: block
-      padding: 0
+      padding: 1em
       &:hover 
         .shadow
           box-shadow: inset 0px 0px 0px 8px #8cdbf9
@@ -77,7 +78,7 @@
       line-height: 1.4
     .code 
       font-size: 1.2em  
-      margin-bottom: 1em
+      margin-bottom: 0.5em
       color: #656565
     .price 
       font-size: 3.2em
@@ -211,3 +212,9 @@
     top: 0
     bottom: 0
     z-index: 99
+.addthis_sharing_toolbox
+  margin-bottom: 0.5em
+.product-brand-logo
+  position: absolute
+  right: 0.7rem
+  top: 0  
