--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -25,6 +25,7 @@
 @import 3-layout/_cos
 @import 3-layout/_checkout
 @import 3-layout/_content
+@import 3-layout/_compare
 
 // @import _header
 // @import _product-box
