--- a/app/assets/sass/3-layout/_product-page.sass
+++ b/app/assets/sass/3-layout/_product-page.sass
@@ -98,9 +98,9 @@
       color: $green
       // margin-bottom: $spacing*2
     .compare 
-      margin-top: $spacing*2
+      // margin-top: $spacing*2
       color: $primary
-      margin-bottom: $spacing*4
+      margin-bottom: 1em
       i 
         vertical-align: middle  
     .button 
@@ -218,3 +218,19 @@
   position: absolute
   right: 0.7rem
   top: 0  
+.compare-input-box
+  display: none
+  background-color: #eee
+  border: 1px solid #ddd
+  padding: 1rem
+  // border-radius: 0.5rem
+  margin-bottom: 1em  
+  &.visible
+    display: block
+  button 
+    vertical-align: middle  
+    background-color: $primary
+    &:hover 
+      background-color: $secondary
+#input-compare
+  width: 15em  
