--- a/app/assets/sass/3-layout/_compare.sass
+++ b/app/assets/sass/3-layout/_compare.sass
@@ -43,6 +43,14 @@
         padding-right: 0.25em
       .compare-value
         padding-left: 0.25em               
+.compare-add-wrapper    
+  margin-bottom: 1em
+  #input-compare-add 
+    width: 15em    
+  button  
+    vertical-align: middle 
+  .control-label
+    font-weight: 600  
 .compare-heading
   border-bottom: 1px solid #00ACEE
   font-size: 1.8rem
