--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -6,7 +6,7 @@
   a 
     color: #000
     display: block 
-    height: 100%
+    height: 283px
     position: relative
   .image 
     height: 190px
@@ -74,6 +74,22 @@
     font-weight: 700
     text-transform: uppercase
     color: #fff  
+    &:hover 
+      background-color: $secondary     
+    .quick-view
+      background-color: $primary
+      display: inline-block
+      border-left: 1px solid #fff
+      width: 4em
+      text-align: center
+      float: right
+      &:hover 
+        background-color: $secondary
+    .detail 
+      display: inline-block   
+      transition: all 0s linear
+      &:hover 
+        background-color: $secondary
   .badge-new
     background-color: $red
     color: #fff
@@ -98,9 +114,8 @@
     color: #fff
     line-height: 1
     padding-top: 13px    
-  &:hover 
-    .button 
-      background-color: $secondary  
+  // &:hover 
+    
 .product-box--list
   overflow: visible
   height: auto
