--- a/app/assets/sass/3-layout/_product-page.sass
+++ b/app/assets/sass/3-layout/_product-page.sass
@@ -234,3 +234,11 @@
       background-color: $secondary
 #input-compare
   width: 15em  
+#product-modal 
+  display: none
+  width: 70vw
+  height: 70vh
+  iframe
+    width: 100%
+    height: 100%
+    border: 2px solid $primary
