--- a/app/assets/sass/2-modules/_carousel.sass
+++ b/app/assets/sass/2-modules/_carousel.sass
@@ -10,12 +10,20 @@
       padding: 20px 20px 0
   .list
     padding: 20px 90px 0
+  .item 
+    padding: 0 0.5em
+    .product-box
+      .image 
+        height: 180px
+        overflow: hidden
+      .button    
+        top: 221px
   .list-border
     border: 1px solid $gray 
     position: relative
     +clearfix
-  .list-navigation
-    padding-top: 4em  
+  // .list-navigation
+    // padding-top: 4em  
   .flex-prev
     background-image: url(../img/arrows.jpg)
     width: 56px
