--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -200,8 +200,8 @@
     border: 1px solid $gray 
     position: relative
     +clearfix
-  .list-navigation
-    padding-top: 4em  
+  // .list-navigation
+  //   padding-top: 4em  
   .flex-prev
     background-image: url(../img/arrows.jpg)
     width: 56px
