--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -3,7 +3,7 @@
   position: relative
   span 
     display: block
-  a 
+  a.detail 
     color: #000
     display: block 
     height: 283px
@@ -62,6 +62,7 @@
     font-size: 1em   
     .fa 
       vertical-align: middle  
+      margin-left: 0.3em
   .button 
     line-height: 40px
     background-color: $green
@@ -86,8 +87,8 @@
       &:hover 
         background-color: $secondary
     .detail 
-      display: inline-block   
-      transition: all 0s linear
+      // display: inline-block   
+      // transition: all 0s linear
       &:hover 
         background-color: $secondary
   .badge-new
@@ -129,7 +130,7 @@
   .detail
     min-height: 19em  
   .title   
-    height: auto
+    // height: auto
     line-height: 1.2   
     font-size: 1.6em
     font-weight: 700
