--- a/app/assets/sass/3-layout/_product-page.sass
+++ b/app/assets/sass/3-layout/_product-page.sass
@@ -3,6 +3,15 @@
   .main-image 
     margin-bottom: $spacing*4 
     position: relative
+    display: flex
+    align-items: center
+    justify-content: center
+    height: 565px
+    cursor: pointer
+    @media (max-width: 1199px)
+      height: 465px
+    @media (max-width: 991px)  
+      height: 355px
     img 
       max-width: 350px
       margin: 0 auto
@@ -218,6 +227,7 @@
   position: absolute
   right: 0.7rem
   top: 0  
+  max-width: 100px
 .compare-input-box
   display: none
   background-color: #eee
@@ -258,3 +268,22 @@
     font-weight: 300
     width: 2rem
     height: 2rem  
+.main-image-popup    
+  display: none
+  background-color: #fff
+  border: 4px solid $primary
+  img 
+    max-height: 80vh
+  .close 
+    position: absolute
+    right: -2px
+    top: -2px
+    background-color: $primary
+    color: #fff
+    z-index: 2
+    opacity: 1
+    vertical-align: middle
+    font-size: 1em
+    font-weight: 300
+    width: 2rem
+    height: 2rem    
