--- a/app/assets/sass/3-layout/_category.sass
+++ b/app/assets/sass/3-layout/_category.sass
@@ -59,7 +59,7 @@
       cursor: pointer 
 .category-header
   color: $primary 
-  margin-bottom: $spacing*2   
+  // margin-bottom: $spacing*2   
 .sortBy
   float: left
   margin-right: 2em
