--- a/app/assets/sass/3-layout/_product-page.sass
+++ b/app/assets/sass/3-layout/_product-page.sass
@@ -29,18 +29,30 @@
       text-align: center
       line-height: 3em
   .thumbs
-    margin-bottom: 1em   
+    margin-bottom: 1em  
+    .item 
+      height: 172px 
+      margin-bottom: $spacing*2
+      @media (max-width: 1199px)
+        height: 139px
+      @media (max-width: 991px)  
+        height: 102px
     a, button
       position: relative
-      border: 1px solid $gray 
-      margin-bottom: $spacing*2
+      display: block
+      border: 1px solid $gray      
       display: block
       padding: 1em
+      height: 100%
+      display: flex
+      align-items: center
+      justify-content: center
       &:hover 
         .shadow
           box-shadow: inset 0px 0px 0px 8px #8cdbf9
     img 
-      width: 100%   
+      // width: 100% 
+      max-height: 100%  
     .shadow 
       position: absolute
       left: 0
