--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -53,6 +53,7 @@
     font-weight: 400
     font-size: 1em   
   .compare
+    cursor: pointer
     position: absolute
     top: 260px
     left: 0
@@ -120,6 +121,10 @@
 .product-box--list
   overflow: visible
   height: auto
+  .compare 
+    top: 0
+    right: 0
+    text-align: right
   .order
     position: absolute
     bottom: 2em 
