--- a/app/assets/sass/3-layout/_product-page.sass
+++ b/app/assets/sass/3-layout/_product-page.sass
@@ -7,7 +7,7 @@
     align-items: center
     justify-content: center
     height: 565px
-    cursor: pointer
+    cursor: pointer 
     @media (max-width: 1199px)
       height: 465px
     @media (max-width: 991px)  
@@ -299,3 +299,14 @@
     font-weight: 300
     width: 2rem
     height: 2rem    
+
+#product-modal
+  overflow: auto
+#popup-content   
+  .product 
+    .main-image
+      height: auto     
+      img 
+        max-width: 100%
+    .variant .dropdown-menu button
+      line-height: 2    
