--- a/app/assets/sass/3-layout/_category.sass
+++ b/app/assets/sass/3-layout/_category.sass
@@ -53,7 +53,7 @@
     &>li>a:hover
       background-color: $primary
       color: #fff
-    a 
+    a, button 
       line-height: 2
       padding-left: 15px 
       cursor: pointer 
