--- a/app/assets/sass/3-layout/_content.sass
+++ b/app/assets/sass/3-layout/_content.sass
@@ -38,3 +38,13 @@
 .banner-home-small
   a 
     display: block    
+.controls 
+  input[type="text"]
+    max-width: 270px    
+.title--page 
+  border-bottom: 1px solid #C7C7C7
+  font-size: 1.8rem
+  font-weight: 700
+  color: $primary
+  margin: 0.5rem 0 1rem
+  line-height: 1.8    
