--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -61,6 +61,8 @@
     color: $primary
     font-weight: 400
     font-size: 1em   
+    background-color: transparent
+    padding: 0
     .fa 
       vertical-align: middle  
       margin-left: 0.3em
