--- a/app/assets/sass/3-layout/_product-page.sass
+++ b/app/assets/sass/3-layout/_product-page.sass
@@ -120,8 +120,10 @@
       // margin-bottom: $spacing*2
     .compare 
       // margin-top: $spacing*2
+      background-color: transparent
       color: $primary
       margin-bottom: 1em
+      padding: 0
       i 
         vertical-align: middle  
     .button 
