--- a/app/assets/sass/3-layout/_content.sass
+++ b/app/assets/sass/3-layout/_content.sass
@@ -1,5 +1,10 @@
 .sidebar-list
   padding-top: 2em
+  .M1 
+    position: relative
+    display: block   
+  .level-1
+    margin-bottom: 2em   
   .item 
     margin-bottom: 2em
   a 
