--- a/app/assets/sass/3-layout/_category.sass
+++ b/app/assets/sass/3-layout/_category.sass
@@ -139,3 +139,11 @@
   background-size: cover
   &:hover    
     background-image: url(../img/cat_tabelHover.svg)           
+#clearFilters
+  font-size: 0.8em 
+  font-weight: 600
+  display: none
+  .fa     
+    color: $red
+    width: 1.2em
+    text-align: center
