--- a/app/assets/sass/2-modules/_product-box.sass
+++ b/app/assets/sass/2-modules/_product-box.sass
@@ -1,6 +1,14 @@
 .product-box
   font-size: 0.9em
   position: relative
+  .favorite 
+    position: absolute
+    right: 0
+    top: 0
+    z-index: 2
+    color: #FBB12A
+    cursor: pointer
+    font-size: 1.4em
   span 
     display: block
   a.detail 
