--- a/app/assets/sass/3-layout/_content.sass
+++ b/app/assets/sass/3-layout/_content.sass
@@ -53,3 +53,13 @@
   color: $primary
   margin: 0.5rem 0 1rem
   line-height: 1.8    
+.content-form 
+  h2 
+    font-weight: 600
+    font-size: 1.4em
+    margin-bottom: 0.5em
+    border-bottom: 1px solid $primary
+    line-height: 2
+    color: $primary  
+  .generic-form  
+    margin-top: 2em
