--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -26,6 +26,7 @@
 @import 3-layout/_checkout
 @import 3-layout/_content
 @import 3-layout/_compare
+@import 3-layout/_login
 
 // @import _header
 // @import _product-box
