--- a/app/assets/sass/2-modules/_nav.sass
+++ b/app/assets/sass/2-modules/_nav.sass
@@ -46,6 +46,7 @@
           background-color: transparent
           text-decoration: underline  
 .navigation-homepage
+  z-index: 99
   +justify-nav
   a 
     background-color: $primary
