--- a/app/assets/sass/3-layout/_cos.sass
+++ b/app/assets/sass/3-layout/_cos.sass
@@ -22,7 +22,9 @@
     display: inline-block 
   .update 
     background-color: transparent
-    color: $green      
+    color: $green  
+  .id 
+    font-size: 0.8em      
   .delete-line  
     text-align: center 
     a 
