--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -27,6 +27,7 @@
 @import 3-layout/_content
 @import 3-layout/_compare
 @import 3-layout/_login
+@import 3-layout/_dataList-solicita
 
 // @import _header
 // @import _product-box
