--- a/app/assets/sass/3-layout/_category.sass
+++ b/app/assets/sass/3-layout/_category.sass
@@ -29,7 +29,10 @@
   .link-group-account
     margin-bottom: 0.5em
     &:last-child 
-      margin-bottom: 0      
+      margin-bottom: 0   
+    .fa 
+      margin-left: 0.3em
+      color: #FBB12A     
 .sidebar 
   margin-top: $spacing*2
   h3 
